RESOLVED FIXED77822
Clients cannot prevent caching of individual responses
https://bugs.webkit.org/show_bug.cgi?id=77822
Summary Clients cannot prevent caching of individual responses
mitz
Reported 2012-02-04 17:27:09 PST
Clients cannot prevent caching of individual responses
Attachments
Add WKBundlePageResourceLoadClient::shouldCacheResponse (9.56 KB, patch)
2012-02-04 17:35 PST, mitz
sam: review+
mitz
Comment 1 2012-02-04 17:28:29 PST
mitz
Comment 2 2012-02-04 17:35:01 PST
Created attachment 125508 [details] Add WKBundlePageResourceLoadClient::shouldCacheResponse
WebKit Review Bot
Comment 3 2012-02-04 17:37:27 PST
Attachment 125508 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 Source/WebKit2/Shared/APIClientTraits.h:46: This { should be at the end of the previous line [whitespace/braces] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sam Weinig
Comment 4 2012-02-04 18:45:15 PST
Comment on attachment 125508 [details] Add WKBundlePageResourceLoadClient::shouldCacheResponse View in context: https://bugs.webkit.org/attachment.cgi?id=125508&action=review >> Source/WebKit2/Shared/APIClientTraits.h:46 >> +{ > > This { should be at the end of the previous line [whitespace/braces] [4] The { is on the wrong line.
mitz
Comment 5 2012-02-04 18:54:56 PST
Note You need to log in before you can comment on or make changes to this bug.