<rdar://problem/10660698> Clients cannot prevent caching of individual responses https://bugs.webkit.org/show_bug.cgi?id=77822

Reviewed by Sam Weinig.

Source/WebKit2:

* Shared/APIClientTraits.cpp: Added definition of interfaceSizesByVersion for
WKBundlePageResourceLoadClient.
* Shared/APIClientTraits.h: Added APIClientTraits specialization for WKBundlePageResourceLoadClient.
* WebProcess/InjectedBundle/API/c/WKBundlePage.h: Added WKBundlePageShouldCacheResponseCallback
typedef, added shouldCacheResponse member to WKBundlePageResourceLoadClient, and bumped
kWKBundlePageResourceLoadClientCurrentVersion to 1.
* WebProcess/InjectedBundle/InjectedBundlePageResourceLoadClient.cpp:
(WebKit::InjectedBundlePageResourceLoadClient::shouldCacheResponse): Added. Calls through
to the client if it implements shouldCacheResponse. Returns true otherwise.
* WebProcess/InjectedBundle/InjectedBundlePageResourceLoadClient.h:
* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::willCacheResponse): Changed to call
InjectedBundlePageResourceLoadClient::shouldCacheResponse() and return nil if the former
returns false.
(WebKit::WebFrameLoaderClient::shouldCacheResponse): Changed to call
InjectedBundlePageResourceLoadClient::shouldCacheResponse().

Tools:

* WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
(WTR::InjectedBundlePage::InjectedBundlePage): Updated for the additional callback.



Canonical link: https://commits.webkit.org/94688@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106753 268f45cc-cd09-0410-ab3c-d52691b4dbfc