Source/WebKit2/Shared/APIClientTraits.h
@@ -31,14 +31,16 @@
 
 namespace WebKit {
 
-template <typename ClientInterface> struct APIClientTraits
-{
+template <typename ClientInterface> struct APIClientTraits {
     static const size_t interfaceSizesByVersion[1];
 };
 template <typename ClientInterface> const size_t APIClientTraits<ClientInterface>::interfaceSizesByVersion[] = { sizeof(ClientInterface) };
 
-template<> struct APIClientTraits<WKBundlePageLoaderClient>
-{
+template<> struct APIClientTraits<WKBundlePageLoaderClient> {
+    static const size_t interfaceSizesByVersion[2];
+};
+
+template<> struct APIClientTraits<WKBundlePageResourceLoadClient> {
     static const size_t interfaceSizesByVersion[2];
 };
 
@@ -50,8 +52,7 @@ template<> struct APIClientTraits<WKPageLoaderClient> {
     static const size_t interfaceSizesByVersion[2];
 };
 
-template<> struct APIClientTraits<WKPageUIClient>
-{
+template<> struct APIClientTraits<WKPageUIClient> {
     static const size_t interfaceSizesByVersion[2];
 };
 
