Source/WebKit2/WebProcess/InjectedBundle/InjectedBundlePageResourceLoadClient.h
@@ -52,6 +52,7 @@ public:
     void didReceiveContentLengthForResource(WebPage*, WebFrame*, uint64_t identifier, uint64_t contentLength);
     void didFinishLoadForResource(WebPage*, WebFrame*, uint64_t identifier);
     void didFailLoadForResource(WebPage*, WebFrame*, uint64_t identifier, const WebCore::ResourceError&);
+    bool shouldCacheResponse(WebPage*, WebFrame*, uint64_t identifier);
 };
 
 } // namespace WebKit
